# neuroml-ai

./: .gitmodules  .pre-commit-config.yaml  AGENTS.md  Readme.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
code_ai_pkg/: LICENSE  pyproject.toml  setup.cfg
code_ai_pkg/neuroml_code_ai/: base_node.py  code_ai.py  schemas.py
code_ai_pkg/neuroml_code_ai/api/: chat.py  conf.py  health.py  main.py
code_ai_pkg/neuroml_code_ai/nodes/: base_node.py  goal_setter.py
code_ai_pkg/neuroml_code_ai/prompts/: goal.md  goal_human.md  planner.md  planner_human.md  tool_picker.md
code_ai_pkg/neuroml_code_ai/ui/: cli.py  streamlit_ui.py
data-sources/neuroml/: generate-single-nml-md.sh  jupyterbook2singlemd.py  nml.py
data-sources/neuroml/sources/nml-docs/: nml-docs-single-page-url-map.md  nml-docs-single-page.md
data-sources/neuroml/sources/nml-elife/: Sinha_et_al_2025.md  url-map.json
data-sources/neuroml/sources/nml-schema-docs/: nml-docs-single-page-schema.md  nml-docs-single-page-url-map.json
mcp_pkg/: Readme.md  setup.cfg
mcp_pkg/mcp/: utils.py
mcp_pkg/mcp/server/: main.py
mcp_pkg/mcp/tools/: code_tools.py
mcp_pkg/mcp/tools/sandbox/: docker.py  local.py
mcp_pkg/neuroml_mcp/: utils.py
mcp_pkg/neuroml_mcp/server/: main.py
mcp_pkg/neuroml_mcp/tools/: code_tools.py  hh_tools.py  neuroml_tools.py
mcp_pkg/neuroml_mcp/tools/sandbox/: __init__.py  docker.py  local.py
mcp_pkg/tests/: test_code_tools.py  test_mcp.py
neuroml_ai/: Readme.md  cli.py  setup.cfg  streamlit_ui.py  utils.py
neuroml_ai/api/: chat.py  health.py  main.py
neuroml_ai/mcp/tools/: code_tools.py
neuroml_ai/mcp/tools/sandbox/: local.py  sandbox.py
neuroml_ai/neuroml_ai/: assistant.py  schemas.py
neuroml_ai/neuroml_ai/api/: chat.py  main.py
neuroml_ai/neuroml_ai/ui/: cli.py  streamlit_ui.py
neuroml_ai/rag/: rag.py  schemas.py  stores.py
rag_pkg/: MANIFEST.in  Readme.md  domains.json  setup.cfg  vector-stores-tests.json  vector-stores.json
rag_pkg/gen_rag/: rag.py  schemas.py  stores.py
rag_pkg/gen_rag/api/: chat.py  health.py  main.py
rag_pkg/gen_rag/data/other/: Readme.md
rag_pkg/gen_rag/data/vector-stores/: Readme.md
rag_pkg/gen_rag/data/vector-stores/nml-docs_bge-m3.db/9004ea1f-7341-4273-8d17-e5a56c85a858/: index_metadata.pickle
rag_pkg/gen_rag/data/vector-stores/nml-docs_bge-m3.db/f0dca809-2a2d-4b85-882c-0e203be290c1/: index_metadata.pickle
rag_pkg/gen_rag/data/vector-stores/nml-schema-docs_bge-m3_latest.db/fda11c0f-eb32-4add-a9a0-bf61db84c518/: index_metadata.pickle
rag_pkg/gen_rag/ui/: cli.py  streamlit_ui.py
rag_pkg/rag/: rag.py  schemas.py  stores.py  utils.py
rag_pkg/rag/data/vector-stores/nml-schema-docs_bge-m3.db/70e1d75f-fb6a-48a1-96ca-2db1d33a2d03/: index_metadata.pickle
rag_pkg/tests/: test_stores.py
scripts/: devstack-cli.sh  devstack.sh  run-docker.sh
scripts/vector-stores/neuroml/: generate-single-nml-md.sh  jupyterbook2singlemd.py
scripts/vector-stores/neuroml/sources/nml-docs/: nml-docs-single-page.md
scripts/vector-stores/neuroml/sources/nml-schema-docs/: nml-docs-single-page-schema.md
utils_pkg/: README.md  setup.cfg
utils_pkg/neuroml_ai_utils/: api.py  llm.py  logging.py  nodes.py  utils.py
