[metadata]
name = neuroml_mcp
version = 0.0.1
author = Ankur Sinha
author_email = ankursinha@fedoraproject.org
url = https://github.com/sanjayankur31/neuroml-ai
license = GPL-3.0-or-later
description = MCP for NeuroML
long_description = file: README.md
long_description_content_type = text/md
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    fastmcp<3
    starlette

include_package_data = True
packages = find:

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    nml-mcp                = neuroml_mcp.server.main:main

[options.package_data]

[options.extras_require]
test =
    pytest
    pytest-asyncio
    ruff

dev =
    neuroml_mcp[test]
    isort


[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504
