[metadata]
name = neuroml-ai
version = 0.0.1
author = Ankur Sinha
author_email = ankursinha@fedoraproject.org
url = https://github.com/sanjayankur31/neuroml-ai
license = GPL-3.0-or-later
description = RAG for NeuroML
long_description = file: README.md
long_description_content_type = text/md
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    langchain
    langchain[google-genai]
    langchain[ollama]
    langchain-core
    langchain-text-splitters
    langchain-chroma
    langchain-community
    langgraph
    langchain-mcp-adapters
    langchain-huggingface
    fastmcp
    typer
    yaspin
    fastapi
    fastapi[standard]
    streamlit
    httpx
    tenacity

include_package_data = True
packages = find:

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    nml-ai                = neuroml_ai.ui.cli:nml_ai_app

[options.package_data]

[options.extras_require]
test =
    pytest
    pytest-asyncio
    ruff

dev =
    neuroml_ai[test]
    pre-commit
    isort


[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504, E251
